# cmake-vcpkg-example

./: CMakeLists.txt
app/: main.cpp
cmake/: display_environment.cmake  env_base.cmake  group_source.cmake
